# nexcraft

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
deploy/: README.md  env.example
docs/: API_INTEGRATION.md  SETUP.md  _gen_ml_tools_sql_examples.py  ml_tools_duckdb_sql_examples.md
examples/: 01_federated_sql_memory.py  02_recipe_local_runtime.py  03_temporal_submit_sketch.py  04_postgres_vs_snowflake.py  05_api_postgres_vs_snowflake.py  06_db_backed_pooled_provider.py  07_sqlite_management_db.py  08_postgres_env_fedsql.py  README.md  demo_kit.py  run_demo_worker.py  sparknotes
nexcraftontologyoss/: T0_T1_addendum_amundsenrds_linkage.md  T0_T1_organization_source_spec.md  T2_to_T6_amundsenrds_sidecar_spec.md  bundle_consumer_api_spec.md  bundle_publishers_spec.md  card_emitter_design.md  causal_ontology_configuration.md  causal_ontology_extraction_design.md  causal_ontology_foundry_design.md  causal_ontology_ingestion_pipeline.md  evaluation_harness_spec.md  hierarchy_persistence_and_ingestion_spec.md  live_sync_pipeline_spec.md  mcp_qa_agents_spec.md  mdl_auto_generation_from_source_spec.md  mdl_bundle_spec.md  mdl_table_concept_annotation_spec.md  relationsdesign.md  retrieval_v2_spec.md  semantic_layer_card_spec.md  storage_topology_reference.md
nextcraftoss/: 00-overview.md  00-vision.md  001-python-over-rust.md  002-monorepo-two-packages.md  003-temporal-for-jobs.md  004-single-source-per-query.md  01-architecture.md  01-recipes.md  02-protocols.md  02-temporal.md  03-duckdb-udfs.md  03-executors.md  04-storage.md  04-streaming.md  README.md  (+5 more)
(+45 files in other folders)
